--- a/03. Guide to HTML5 Canvas/05. Canvas tutorial/05. Using images/index.html
+++ b/03. Guide to HTML5 Canvas/05. Canvas tutorial/05. Using images/index.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section>
+        <h2>Drawing images</h2>
+        <canvas id="draw-image" width="200" height="150">
+            Drawing images
+        </canvas>
+    </section>
+
+    <section>
+        <h2>Tiling an image</h2>
+        <canvas id="tile-image" width="150" height="150">
+            Tiling an image
+        </canvas>
+    </section>
+
+    <section>
+        <h2>Slicing</h2>
+        <img src="https://mdn.mozillademos.org/files/225/Canvas_drawimage.jpg" alt="drawImage parameters explanation">
+        <canvas id="slice-image" width="150" height="150">
+            Slicing
+        </canvas>
+    </section>
+
+    <section>
+        <h2>Framing an image</h2>
+        <canvas id="frame-image" width="150" height="150">
+            Framing an image
+        </canvas>
+    </section>
+
+    <section class="body">
+        <h2>Art gallery example</h2>
+        <table>
+
+        </table>
+    </section>
 </body>
+<script src="./app.js"></script>
 </html>
